# mkdocs-mdpo-plugin

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .website.yaml  .yamllint  404.html  CNAME  MANIFEST.in  README.md  index.html  index.md.po  mkdocs.yml  setup.cfg  sitemap.xml
.github/workflows/: ci.yml  docs-build.yml  gh-pages.yml  update-copyright-years.yml  website-check.yml
assets/javascripts/: bundle.4ea5477f.min_en.js  bundle.4ea5477f.min_es.js  extensions-support.js  language-selector.js  material-relative-language-selector.js  mmrls.js
assets/stylesheets/: theme-overrides.css
config/: index.html
docs/: config.md  extensions-support.md  index.md
docs/assets/javascripts/: extensions-support.js  language-selector.js
docs/assets/stylesheets/: theme-overrides.css
docs/es/: _compendium.po  config.md.po  extensions-support.md.po  index.md.po
docs/es/extensions-support/: official.md.po  oficial.md.po  pymdownx.md.po
docs/es/plugins-support/: navigation-and-page-building.md.po
docs/es/tested-plugins/: api-documentation-building.md.po
docs/extensions-support/: official.md  oficial.md  pymdownx.md
docs/locale/es/: _compendium.po  config.md.po  index.md.po  useful-recipes.md.po
docs/locale/es/extensions-support/: official.md.po  pymdownx.md.po
docs/locale/es/tested-plugins/: api-documentation-building.md.po  navigation-and-page-building.md.po
docs/overrides/: main.html
docs/plugins-support/: navigation-and-page-building.md
docs/src/: config.md  file-to-be-inserted.txt  index.md  schema.json  useful-recipes.md
docs/src/assets/javascripts/: extensions-support.js
docs/src/assets/stylesheets/: components.css  pymdownx.progressbar.css
docs/src/extensions-support/: official.md  pymdownx.md
docs/src/tested-plugins/: api-documentation-building.md
docs/tested-plugins/: api-documentation-building.md  navigation-and-page-building.md
docs/theme-overrides/: main.html
es/: index.html
es/config/: index.html
es/extensions-support/: index.html
es/extensions-support/official/: index.html
es/extensions-support/oficial/: index.html
es/extensions-support/pymdownx/: index.html
es/plugins-support/navigation-and-page-building/: index.html
es/tested-plugins/api-documentation-building/: index.html
es/tested-plugins/navigation-and-page-building/: index.html
es/useful-recipes/: index.html
examples/exclude/: mkdocs.yml
examples/exclude/docs/locale/es/: do-not-translate.md.po
examples/exclude/docs/locale/fr/: do-not-translate.md.po
examples/material/: mkdocs.yml
examples/material-theme/: mkdocs.yml
examples/material-theme/docs/locale/es/: _compendium.po  foo.md.po  index.md.po
examples/material-theme/docs/locale/fr/: _compendium.po  foo.md.po  index.md.po
examples/material-theme/docs/src/: foo.md  index.md
examples/material/docs/: foo.md
examples/material/docs/es/: _compendium.po  foo.md.po  index.md.po
examples/material/docs/fr/: _compendium.po  foo.md.po  index.md.po
examples/min-translated-messages/: mkdocs.yml
examples/min-translated-messages-exclude/: mkdocs.yml
examples/min-translated-messages-exclude/docs/src/: changelog.md  do-not-translate.md
examples/min-translated-messages/docs/locale/es/: file-excluded-from-translations.md.po
examples/min-translated-messages/docs/locale/fr/: file-excluded-from-translations.md.po  index.md.po
examples/min-translated-messages/docs/src/: file-excluded-from-translations.md
examples/mkdocs-theme/: mkdocs.yml
examples/mkdocs-theme/docs/src/: foo.md
examples/po-outside-docs/: mkdocs.yml
examples/readthedocs-theme/: mkdocs.yml
extensions-support/: index.html
extensions-support/official/: index.html
extensions-support/oficial/: index.html
extensions-support/pymdownx/: index.html
mkdocs_mdpo_plugin/: __init__.py  compat.py  config.py  docs_helper.py  extension.py  extensions.py  ignores.py  io.py  md4c_events.py  mdpo_events.py  mdpo_utils.py  mkdocs_utils.py  on_config.py  plugin.py  search_indexes.py  translations.py  utils.py
mkdocs_mdpo_plugin/custom_mdpo_sitemap/: sitemap.xml
plugins-support/navigation-and-page-building/: index.html
search/: search_index.json  search_index_en.json  search_index_es.json
tested-plugins/api-documentation-building/: index.html
tested-plugins/navigation-and-page-building/: index.html
tests/: config_suite.py  conftest.py  extensions_suite.py  test_build.py  test_compendium.py  test_docs.py  test_examples.py  test_exclude.py  test_metadata_translation.py  test_min_translated_messages.py  test_mkdocs_utils.py  test_plugin_config.py  test_search_indexes.py
tests/test_config/: test_plugin_config.py  test_translate.py
tests/test_extensions/: test_extensions_compat.py  test_official_extensions.py  test_pymdownx_extensions.py
tests/test_plugins/: test_api_documentation_building.py  test_navigation_and_page_building.py
useful-recipes/: index.html
(+4 files in other folders)
