[metadata]
name = mkdocs_mdpo_plugin
version = 0.0.11
description = Mkdocs plugin for translations using PO files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/mkdocs-mdpo-plugin
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = mkdocs_mdpo_plugin
install_requires =
    mdpo>=0.3.52
python_requires = >=3.6
include_package_data = True

[options.entry_points]
markdown.extensions =
    mkdocs.mdpo = mkdocs_mdpo_plugin.extension:MkdocsMdpoExtension
mkdocs.plugins =
    mdpo = mkdocs_mdpo_plugin.plugin:MdpoPlugin

[options.extras_require]
dev =
    bump2version==1.0.1
    flake8==3.9.1
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.8.0
    mkdocs==1.1.2
    mkdocs-exclude==1.0.2
    mkdocs-include-markdown-plugin==3.1.0
    mkdocs-material==7.1.2
    mkdocs-material-relative-language-selector==1.1.0
    mkdocstrings==0.15.1
    pre-commit==2.12.1
    pymdown-extensions==8.1.1
    pytest==6.2.3
    pytest-cov==2.11.1
    yamllint==1.26.1
doc =
    mkdocs==1.1.2
    mkdocs-exclude==1.0.2
    mkdocs-include-markdown-plugin==3.1.0
    mkdocs-material==7.1.2
    mkdocs-material-relative-language-selector==1.1.0
    mkdocs-minify-plugin==0.4.0
    mkdocstrings==0.15.1
    pymdown-extensions==8.1.1
lint =
    flake8==3.9.1
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.8.0
    yamllint==1.26.1
test =
    mkdocs==1.1.2
    mkdocs-exclude==1.0.2
    mkdocs-material==7.1.2
    mkdocstrings==0.15.1
    pymdown-extensions==8.1.1
    pytest==6.2.3
    pytest-cov==2.11.1

[flake8]
extend-ignore =
    E731

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER

[coverage:report]
exclude_lines =
    pragma: no cover
